modification of sub model and controller
